--- a/Project Roentgen/src/view/PatientInfoView.fxml
+++ b/Project Roentgen/src/view/PatientInfoView.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Spinner?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -44,13 +45,13 @@
               </rowConstraints>
                <children>
                   <Label text="First Name:" />
-                  <TextField fx:id="firstNameTextField" GridPane.columnIndex="1" />
-                  <TextField fx:id="lastNameTextField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <TextField fx:id="firstNameTextField" editable="false" GridPane.columnIndex="1" />
+                  <TextField fx:id="lastNameTextField" editable="false" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                   <Label text="Last Name:" GridPane.rowIndex="1" />
                   <Label text="Middle Initial:" GridPane.rowIndex="2" />
-                  <TextField fx:id="middleInitialTextField" onKeyTyped="#middleInitialKeyTyped" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  <TextField fx:id="middleInitialTextField" editable="false" onKeyTyped="#middleInitialKeyTyped" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                   <Label text="Gender:" GridPane.rowIndex="3" />
-                  <ComboBox fx:id="genderComboBox" prefWidth="150.0" promptText="Select Gender" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                  <ComboBox fx:id="genderComboBox" disable="true" prefWidth="150.0" promptText="Select Gender" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                   <GridPane GridPane.columnIndex="1" GridPane.rowIndex="4">
                     <columnConstraints>
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -61,14 +62,14 @@
                     </rowConstraints>
                      <children>
                         <TextField fx:id="otherEthnicityTextField" disable="true" GridPane.rowIndex="1" />
-                        <ComboBox fx:id="ethnicityComboBox" onAction="#ethnicitySelected" prefWidth="150.0" promptText="Select Ethnicity" />
+                        <ComboBox fx:id="ethnicityComboBox" disable="true" onAction="#ethnicitySelected" prefWidth="150.0" promptText="Select Ethnicity" />
                      </children>
                   </GridPane>
                   <Label text="Ethnicity:" GridPane.rowIndex="4" />
                   <Label text="Social Security Number:" GridPane.rowIndex="5" />
                   <Label text="Date of Birth:" GridPane.rowIndex="6" />
-                  <TextField fx:id="ssnTextField" promptText="123-45-6789" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-                  <DatePicker fx:id="dobDatePicker" promptText="01/01/1990" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+                  <TextField fx:id="ssnTextField" editable="false" promptText="123-45-6789" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                  <DatePicker fx:id="dobDatePicker" disable="true" promptText="01/01/1990" GridPane.columnIndex="1" GridPane.rowIndex="6" />
                </children>
             </GridPane>
             <GridPane GridPane.columnIndex="1">
@@ -77,17 +78,19 @@
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
               </columnConstraints>
               <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="93.0" minHeight="10.0" prefHeight="79.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="115.0" minHeight="10.0" prefHeight="69.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="128.0" minHeight="10.0" prefHeight="94.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="125.0" minHeight="10.0" prefHeight="96.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="156.0" minHeight="10.0" prefHeight="154.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Label text="Phone Number:" />
-                  <Label text="Email Address:" GridPane.rowIndex="1" />
-                  <Label text="Mailing Address:" GridPane.rowIndex="2" />
-                  <TextField fx:id="phoneNumTextField" promptText="555-555-5555" GridPane.columnIndex="1" />
-                  <TextField fx:id="emailTextField" promptText="example@comp.com" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                  <GridPane GridPane.columnIndex="1" GridPane.rowIndex="2">
+                  <Label text="Phone Number:" GridPane.rowIndex="2" />
+                  <Label text="Email Address:" GridPane.rowIndex="3" />
+                  <Label text="Mailing Address:" GridPane.rowIndex="4" />
+                  <TextField fx:id="phoneNumTextField" editable="false" promptText="555-555-5555" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  <TextField fx:id="emailTextField" editable="false" promptText="example@comp.com" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                  <GridPane GridPane.columnIndex="1" GridPane.rowIndex="4">
                     <columnConstraints>
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                     </columnConstraints>
@@ -98,10 +101,26 @@
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
-                        <TextField fx:id="addressTextField" promptText="Address" />
-                        <TextField fx:id="cityTextField" promptText="City" GridPane.rowIndex="1" />
-                        <TextField fx:id="stateTextField" promptText="State" GridPane.rowIndex="2" />
-                        <TextField fx:id="zipTextField" promptText="Zip Code" GridPane.rowIndex="3" />
+                        <TextField fx:id="addressTextField" editable="false" promptText="Address" />
+                        <TextField fx:id="cityTextField" editable="false" promptText="City" GridPane.rowIndex="1" />
+                        <TextField fx:id="stateTextField" editable="false" promptText="State" GridPane.rowIndex="2" />
+                        <TextField fx:id="zipTextField" editable="false" promptText="Zip Code" GridPane.rowIndex="3" />
+                     </children>
+                  </GridPane>
+                  <Label text="Height:" />
+                  <Label text="Weight:" GridPane.rowIndex="1" />
+                  <Spinner fx:id="weightSpinner" disable="true" editable="true" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <GridPane GridPane.columnIndex="1">
+                    <columnConstraints>
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                     <children>
+                        <ComboBox fx:id="feetComboBox" disable="true" prefWidth="150.0" promptText="Select Feet" />
+                        <ComboBox fx:id="inchesComboBox" disable="true" prefWidth="150.0" promptText="Select Inches" GridPane.rowIndex="1" />
                      </children>
                   </GridPane>
                </children>
