--- a/Project Roentgen/bin/view/LoginView.fxml
+++ b/Project Roentgen/bin/view/LoginView.fxml
@@ -9,14 +9,14 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="352.0" prefWidth="269.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="352.0" prefWidth="269.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.LoginController">
    <children>
       <Label layoutX="52.0" layoutY="147.0" text="RIS Login">
          <font>
             <Font size="40.0" />
          </font>
       </Label>
-      <Button fx:id="clickLogin" layoutX="112.0" layoutY="313.0" mnemonicParsing="false" text="Login" />
+      <Button fx:id="clickLogin" layoutX="112.0" layoutY="313.0" mnemonicParsing="false" onAction="#Login" text="Login" />
       <TextField fx:id="txtUsername" alignment="CENTER" layoutX="60.0" layoutY="242.0" promptText="Username" />
       <TextField fx:id="txtPassword" alignment="CENTER" layoutX="61.0" layoutY="280.0" promptText="Password" />
       <MenuButton fx:id="clickSelect" layoutX="80.0" layoutY="205.0" mnemonicParsing="false" text="View Selection">
