--- a/Project Roentgen/src/view/ReceptionistView.fxml
+++ b/Project Roentgen/src/view/ReceptionistView.fxml
@@ -19,9 +19,9 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1200.0" tabClosingPolicy="UNAVAILABLE" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.65">
+<TabPane fx:id="receptionistTabPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1200.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ReceptionistController">
   <tabs>
-    <Tab text="Appointments">
+    <Tab fx:id="appointmentsTab" onSelectionChanged="#appointmentsTabClicked" text="Appointments">
       <content>
         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                <children>
@@ -144,7 +144,7 @@
                </children></AnchorPane>
       </content>
     </Tab>
-    <Tab text="Patient Info">
+    <Tab fx:id="patInfoTab" text="Patient Info">
       <content>
         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                <children>
@@ -176,8 +176,8 @@
                               <TextField fx:id="firstNameTextField" editable="false" GridPane.columnIndex="1" />
                               <TextField fx:id="lastNameTextField" editable="false" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                               <Label alignment="CENTER" prefHeight="17.0" prefWidth="317.0" text="Last Name:" GridPane.rowIndex="1" />
-                              <Label alignment="CENTER" prefHeight="17.0" prefWidth="383.0" text="Middle Initial:" GridPane.rowIndex="2" />
-                              <TextField fx:id="middleInitialTextField" editable="false" onKeyTyped="#middleInitialKeyTyped" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                              <Label alignment="CENTER" prefHeight="17.0" prefWidth="383.0" text="Middle Name:" GridPane.rowIndex="2" />
+                              <TextField fx:id="middleNameTextField" editable="false" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                               <Label alignment="CENTER" prefHeight="17.0" prefWidth="352.0" text="Gender:" GridPane.rowIndex="3" />
                               <ComboBox fx:id="genderComboBox" disable="true" prefWidth="150.0" promptText="Select Gender" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                               <GridPane GridPane.columnIndex="1" GridPane.rowIndex="4">
@@ -291,8 +291,8 @@
                         </GridPane>
                      </children>
                   </GridPane>
-                  <Button fx:id="editPatInfoButton" layoutX="14.0" layoutY="633.0" mnemonicParsing="false" onAction="#editButtonPressed" text="Edit Patient" />
-                  <Button layoutX="101.0" layoutY="633.0" mnemonicParsing="false" onAction="#deleteButtonPressed" text="Delete Patient" />
+                  <Button fx:id="editPatInfoButton" layoutX="14.0" layoutY="633.0" mnemonicParsing="false" onAction="#editPatButtonPressed" text="Edit Patient" />
+                  <Button layoutX="111.0" layoutY="633.0" mnemonicParsing="false" onAction="#deletePatButtonPressed" text="Delete Patient" />
                </children></AnchorPane>
       </content>
     </Tab>
