--- a/Project Roentgen/bin/view/LoginView.fxml
+++ b/Project Roentgen/bin/view/LoginView.fxml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.MenuButton?>
-<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -11,7 +10,7 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="352.0" prefWidth="269.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.LoginController">
    <children>
-      <Label layoutX="52.0" layoutY="147.0" text="RIS Login">
+      <Label layoutX="51.0" layoutY="99.0" text="RIS Login">
          <font>
             <Font size="40.0" />
          </font>
@@ -19,14 +18,7 @@
       <Button fx:id="clickLogin" layoutX="112.0" layoutY="313.0" mnemonicParsing="false" onAction="#Login" text="Login" />
       <TextField fx:id="txtUsername" alignment="CENTER" layoutX="60.0" layoutY="242.0" promptText="Username" />
       <TextField fx:id="txtPassword" alignment="CENTER" layoutX="61.0" layoutY="280.0" promptText="Password" />
-      <MenuButton fx:id="clickSelect" layoutX="80.0" layoutY="205.0" mnemonicParsing="false" text="View Selection">
-        <items>
-          <MenuItem fx:id="viewRad" mnemonicParsing="false" text="Radiologist" />
-          <MenuItem fx:id="viewRec" mnemonicParsing="false" text="Receptionist" />
-            <MenuItem fx:id="viewTech" mnemonicParsing="false" text="Technician" />
-            <MenuItem fx:id="viewMD" mnemonicParsing="false" text="M.D." />
-        </items>
-      </MenuButton>
       <ImageView fitHeight="143.0" fitWidth="200.0" layoutX="35.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" />
+      <ChoiceBox fx:id="viewSelect" layoutX="59.0" layoutY="190.0" prefWidth="150.0" />
    </children>
 </AnchorPane>
