--- a/Project Roentgen/src/view/MDView.fxml
+++ b/Project Roentgen/src/view/MDView.fxml
@@ -3,20 +3,20 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
 <TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="631.0" prefWidth="1011.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/9.0.4" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MDController">
   <tabs>
-    <Tab closable="false" text="M.D. View">
+    <Tab id="mdTab" closable="false" text="M.D. View">
       <content>
         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                <children>
@@ -26,42 +26,51 @@
                            <children>
                               <AnchorPane prefHeight="601.0" prefWidth="255.0">
                                  <children>
-                                    <Label layoutX="5.0" layoutY="12.0" prefHeight="23.0" prefWidth="255.0" text="Current Patients: ">
-                                       <font>
-                                          <Font size="18.0" />
-                                       </font>
-                                    </Label>
-                                    <ListView id="mdListView" layoutY="36.0" prefHeight="565.0" prefWidth="260.0" />
+                                    <TableView id="mdTableView" layoutX="5.0" layoutY="2.0" prefHeight="595.0" prefWidth="248.0">
+                                      <columns>
+                                        <TableColumn id="mdCurrentPatientsTableColumn" prefWidth="246.0" text="Current Patients" />
+                                      </columns>
+                                    </TableView>
                                  </children>
                               </AnchorPane>
                               <ScrollPane id="imagesScroll" layoutX="258.0" prefHeight="600.0" prefWidth="503.0">
                                 <content>
                                   <AnchorPane id="images" minHeight="0.0" minWidth="0.0" prefHeight="583.0" prefWidth="503.0">
                                        <children>
-                                          <Label layoutX="4.0" layoutY="10.0" prefHeight="26.0" prefWidth="485.0" text="Images: ">
+                                          <TableView id="imagesTableView" layoutY="29.0" prefHeight="553.0" prefWidth="484.0">
+                                            <columns>
+                                              <TableColumn id="thumbnailTableColumn" prefWidth="152.0" text="Thumbnail" />
+                                                <TableColumn id="descriptionTableColumn" prefWidth="169.0" text="Description" />
+                                                <TableColumn id="dateAddedTableColumn" prefWidth="162.0" text="Date Added" />
+                                            </columns>
+                                          </TableView>
+                                          <Label layoutX="8.0" layoutY="3.0" prefHeight="17.0" prefWidth="87.0" text="Images:">
                                              <font>
                                                 <Font size="18.0" />
                                              </font>
                                           </Label>
-                                          <ImageView id="images" fitHeight="539.0" fitWidth="459.0" layoutX="14.0" layoutY="36.0" pickOnBounds="true" preserveRatio="true" />
                                        </children>
                                     </AnchorPane>
                                 </content>
                               </ScrollPane>
                               <AnchorPane layoutX="762.0" prefHeight="599.0" prefWidth="247.0">
                                  <children>
-                                    <Label layoutX="3.0" layoutY="14.0" prefHeight="23.0" prefWidth="244.0" text="Patient Info: ">
+                                    <TableView id="mdPatientInfoTableView" layoutX="3.0" layoutY="2.0" prefHeight="286.0" prefWidth="243.0">
+                                      <columns>
+                                        <TableColumn id="mdPatientInfoTableColumn" prefWidth="242.0" text="Patient Info" />
+                                      </columns>
+                                    </TableView>
+                                    <TableView id="radiologistReportTableView" layoutX="3.0" layoutY="310.0" prefHeight="287.0" prefWidth="242.0">
+                                      <columns>
+                                        <TableColumn id="radiologistReportTitleColumn" prefWidth="127.0" text="Title" />
+                                          <TableColumn id="radiologistReportDownloadColumn" prefWidth="114.0" text="Download" />
+                                      </columns>
+                                    </TableView>
+                                    <Label layoutX="3.0" layoutY="288.0" text="Radiologist Report: ">
                                        <font>
                                           <Font size="18.0" />
                                        </font>
                                     </Label>
-                                    <Label layoutX="5.0" layoutY="291.0" prefHeight="23.0" prefWidth="243.0" text="Radiologist Report: ">
-                                       <font>
-                                          <Font size="18.0" />
-                                       </font>
-                                    </Label>
-                                    <ListView id="mdPatientInfoListView" layoutX="5.0" layoutY="37.0" prefHeight="253.0" prefWidth="239.0" />
-                                    <ImageView fitHeight="279.0" fitWidth="238.0" layoutX="5.0" layoutY="314.0" pickOnBounds="true" preserveRatio="true" />
                                  </children>
                               </AnchorPane>
                            </children>
@@ -71,7 +80,7 @@
                </children></AnchorPane>
       </content>
     </Tab>
-    <Tab closable="false" text="Patient Request">
+    <Tab id="patientRequestTab" closable="false" text="Patient Request">
       <content>
         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                <children>
@@ -82,7 +91,13 @@
                               <Font size="18.0" />
                            </font>
                         </Label>
-                        <ListView id="patientRequestListView" layoutX="14.0" layoutY="37.0" prefHeight="266.0" prefWidth="984.0" />
+                        <TableView id="mdPatientRequestTableView" layoutX="14.0" layoutY="37.0" prefHeight="254.0" prefWidth="984.0">
+                          <columns>
+                              <TableColumn id="mdPatientIDTableColumn" prefWidth="121.0" text="Patient ID" />
+                            <TableColumn id="mdPatientFirstNameTableColumn" prefWidth="190.0" text="First Name" />
+                            <TableColumn id="mdPatientLastNameTableColumn" prefWidth="206.0" text="Last Name" />
+                          </columns>
+                        </TableView>
                      </children>
                   </AnchorPane>
                   <AnchorPane layoutX="-1.0" layoutY="303.0" prefHeight="297.0" prefWidth="1011.0">
